<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/aquamarine">

    <TextView
        android:id="@+id/appNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:textSize="@dimen/_40sdp"
        android:textColor="@color/teal_700"/>

    <TextView
        android:id="@+id/loginTextTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appNameTv"
        android:text="@string/register_text"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_15sdp"
        android:textSize="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginTextTv"
        android:layout_marginStart="@dimen/_45sdp"
        android:layout_marginEnd="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_45sdp"
        android:hint="@string/email"
        app:boxCornerRadiusBottomEnd="7dp"
        app:boxCornerRadiusBottomStart="7dp"
        app:boxCornerRadiusTopEnd="7dp"
        app:boxCornerRadiusTopStart="7dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@color/aquamarine"
        android:textColorHint="@color/teal_700">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/white"
            android:textColor="@color/teal_700"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nickTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailTil"
        android:layout_marginStart="@dimen/_45sdp"
        android:layout_marginEnd="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/nick"
        app:boxCornerRadiusBottomEnd="7dp"
        app:boxCornerRadiusBottomStart="7dp"
        app:boxCornerRadiusTopEnd="7dp"
        app:boxCornerRadiusTopStart="7dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@color/aquamarine"
        android:textColorHint="@color/teal_700">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nickEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/white"
            android:textColor="@color/teal_700"
            android:maxLength="12"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nickTil"
        android:layout_marginStart="@dimen/_45sdp"
        android:layout_marginEnd="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/password"
        app:boxCornerRadiusBottomEnd="7dp"
        app:boxCornerRadiusBottomStart="7dp"
        app:boxCornerRadiusTopEnd="7dp"
        app:boxCornerRadiusTopStart="7dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@color/aquamarine"
        android:textColorHint="@color/teal_700"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:backgroundTint="@color/white"
            android:textColor="@color/teal_700"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordConfirmTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordTil"
        android:layout_marginStart="@dimen/_45sdp"
        android:layout_marginEnd="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/confirm_password"
        app:boxCornerRadiusBottomEnd="7dp"
        app:boxCornerRadiusBottomStart="7dp"
        app:boxCornerRadiusTopEnd="7dp"
        app:boxCornerRadiusTopStart="7dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@color/aquamarine"
        android:textColorHint="@color/teal_700"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordConfirmEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:backgroundTint="@color/white"
            android:textColor="@color/teal_700"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@+id/passwordConfirmTil"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:cornerRadius="7dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/register"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/errorTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/registerBtn"
        android:layout_centerHorizontal="true"
        android:textColor="@color/teal_700"
        android:textSize="18dp"/>

</RelativeLayout>